# stock-curator

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  DEPLOYMENT.md  README.md  SECURITY.md  SECURITY_AUDIT_REPORT.md  SECURITY_IMPROVEMENTS_SUMMARY.md  STREAMLIT_GUIDE.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  codeql.yml  daily_pipeline.yml  dependency-security.yml
archive/notebooks_backup/: 01_data_ingestion_llm.ipynb  02_stock_data_collection.ipynb  03_ml_model_training.ipynb  04a_return_prediction_multihorizon.ipynb  04b_autoregressive_1day_prediction.ipynb  05_ensemble_methods.ipynb  06_feature_selection.ipynb  07_temporal_fusion_transformer.ipynb  08_chronos.ipynb  09_advanced_technical_features.ipynb  10_production_ml_filter.ipynb
data/daily_results/: 2025-12-23_predictions.json  2025-12-24_predictions.json  2025-12-25_predictions.json  2025-12-26_predictions.json  2025-12-29_predictions.json  2025-12-30_predictions.json  2025-12-31_predictions.json  2026-01-01_predictions.json  2026-01-02_predictions.json  2026-01-05_predictions.json  2026-01-06_predictions.json  2026-01-07_predictions.json  2026-01-08_predictions.json  2026-01-09_predictions.json  2026-01-12_predictions.json  2026-01-13_predictions.json  2026-01-14_predictions.json  2026-01-15_predictions.json  (+127 more)
notebooks/: 01_data_ingestion_llm.ipynb
scripts/: json_stock_list_filtering.py  testing_trial_functions.py
streamlit_app/: app.py
tests/: __init__.py  test_config.py  test_features.py  test_security.py  test_stock_validator.py  test_utils.py
(+27 files in other folders)
