[project]
name = "stock-curator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "google-generativeai>=0.8.5",
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
    "lxml-html-clean>=0.4.3",
    "matplotlib>=3.10.6",
    "nsepy>=0.8",
    "numpy>=1.24.4",
    "pandas>=2.0.3",
    "plotly>=6.3.0",
    "prophet>=1.1.7",
    "scikit-learn>=1.3.2",
    "seaborn>=0.13.2",
    "tensorflow>=2.11.1",
    "yfinance>=0.2.66",
]
