[project]
name = "stock-curator"
version = "0.1.0"
description = "AI-Powered Stock Analysis System combining LLM extraction and ML predictions"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Core ML/Data
    "beautifulsoup4>=4.14.2",
    "google-generativeai>=0.8.5",
    "lxml-html-clean>=0.4.3",
    "matplotlib>=3.10.6",
    "mlflow>=3.6.0",
    "numpy>=1.24.4",
    "pandas>=2.0.3",
    "plotly>=6.3.0",
    "scikit-learn>=1.3.2",
    "xgboost>=3.1.1",
    # Production dependencies
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "pytz>=2024.1",
    # Dashboard
    "streamlit>=1.31.0",
    # Testing & Linting
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.9",
]

[tool.bandit]
exclude_dirs = ["tests", "archive", ".venv", "venv"]
skips = ["B101"]  # Skip assert_used check (used in tests)

[tool.bandit.assert_used]
skips = ["*_test.py", "test_*.py"]
